--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <i class="bx bx-lock-alt"></i>
                 </div>
                 <div class="input-box">
+                    <form id="redirectForm" action="https://kevinsplourenco.github.io/SAME-IHC/pagina_inicial.html" method="get"></form>
                     <input type="submit" class="submit" value="Entrar">
                 </div>
                 <div class="two-col">
