--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="images/favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="scripts.js"></script>
     <title>SAME | Sistema Administrativo para Microempreendedores</title>
 </head>
@@ -18,9 +19,10 @@
             <div class="nav-menu" id="navMenu">
                 <ul>
                     <li><a href="#" class="link active">Início</a></li>
-                    <li><a href="#" class="link">Novidades</a></li>
                     <li><a href="#" class="link">Serviços</a></li>
+                    <li><a href="#" class="link">Novidades</a></li>
                     <li><a href="#" class="link">Sobre</a></li>
+                    <li><a href="https://same-app-3n9h20.flutterflow.app" class="link">Teste nosso Aplicativo! <i class="fas fa-external-link-alt"></i></a></li>
                 </ul>
             </div>
             <div class="nav-button">
